WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85810
IndexedDB: LevelDB coding for bools is broken
https://bugs.webkit.org/show_bug.cgi?id=85810
Summary
IndexedDB: LevelDB coding for bools is broken
Joshua Bell
Reported
2012-05-07 10:53:32 PDT
IndexedDB: LevelDB coding for bools is broken
Attachments
Patch
(3.59 KB, patch)
2012-05-07 10:59 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-05-07 10:59:15 PDT
Created
attachment 140553
[details]
Patch
Joshua Bell
Comment 2
2012-05-07 11:02:26 PDT
Fix for
http://crbug.com/126388
broken by webkit roll including
http://webkit.org/b/85557
My bad. My patch for
http://webkit.org/b/85557
expanded after review and (1) I didn't get it re-reviewed, and (2) I didn't add unit tests despite a lovely pre-existing setup for them. Fix is simple, and added unit tests. tony@ - r?
WebKit Review Bot
Comment 3
2012-05-07 11:54:05 PDT
Comment on
attachment 140553
[details]
Patch Clearing flags on attachment: 140553 Committed
r116333
: <
http://trac.webkit.org/changeset/116333
>
WebKit Review Bot
Comment 4
2012-05-07 11:54:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug